syntax = "proto3";

option go_package = "./pb";

package example;

// 消息号定义
enum CmdQuest {
	CmdQuest_None = 0; // 解决"The first enum value must be zero in proto3."的报错
	
	// 消息号枚举值的命名规范:Cmd_MessageName,便于工具处理,生成一些辅助代码

	Cmd_FinishQuestReq = 1201; // 完成任务
	Cmd_FinishQuestRes = 1202; // 完成任务的返回结果
}

// 完成任务
message FinishQuestReq {
  int32 questCfgId = 1; // 任务id
}

// 完成任务的返回结果
message FinishQuestRes {
  int32 questCfgId = 1; // 任务id
}
